Carga de archivos masiva

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,6 @@ add_executable(Fase_1 main.cpp
         Headers/Publicacion.h
         Headers/ListPubliacion.h
         Listas/ListPublicacion.cpp
+        Headers/CargaMasiva.h
+        Listas/CargaMasiva.cpp
 )
